force-app/main/default/objects/AccountRelationship__c/AccountRelationship__c.object-meta.xml
<CustomObject>
    <label>Account Relationship</label>
    <nameField>
        <displayFormat>ACR-{00000000}</displayFormat>
        <label>Account Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>