force-app/main/default/objects/AccountRelationship__c/fields/ParentAccount__c.field-meta.xml
<CustomField>
    <fullName>ParentAccount__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent account in the Parent-Related account relationship.</description>
    <inlineHelpText>Choose the primary (main) Parent account for this relationship.</inlineHelpText>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Accounts</relationshipLabel>
    <relationshipName>ParentAccountRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>