force-app/main/default/objects/AccountRelationship__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account which is related to the Parent Account.</description>
    <inlineHelpText>Choose the Account which is related to the Parent Account.</inlineHelpText>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parent Accounts</relationshipLabel>
    <relationshipName>ChildAccountRelationships</relationshipName>
    <type>Lookup</type>
</CustomField>